database-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database

spec:
  replicas: 1

  selector:
    matchLabels:
      app: database

  template:
    metadata:
      labels:
        app: database

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-pvc
