frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: frontend-http
      port: 80
      targetPort: 80
      protocol: TCP

    - name: backend-http
      port: 3000
      targetPort: 3000
      protocol: TCP
